--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jane-doe/node-example.git"
+    "url": "https://github.com/isy012/herokunode.git"
   },
   "keywords": [
     "example",
@@ -17,12 +17,12 @@
   "author": "izzy",
   "license": "CC",
   "bugs": {
-    "url": "https://github.com/jane-doe/node-example/issues"
+    "url": "https://github.com/isy012/herokunode/issues"
   },
   "dependencies": {
     "logfmt": "~0.21.0",
     "express": "~3.5.0"
-  }
+  },
   "engines": {
     "node": "0.10.x"
   }
