--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "dependencies": {
     "logfmt": "~0.21.0",
-    "express": "~3.5.0"
+    "pg": "2.x",
+    "express": "3.x"
   },
   "engines": {
     "node": "0.10.x"
